--- a/app.css
+++ b/app.css
@@ -2,6 +2,9 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1rem;
+    font-weight: 500;
 }
 *,*:before,*:after{
     box-sizing: inherit;
@@ -10,7 +13,6 @@
 header{
     width: 100%;
     height: 4.5rem;
-    margin-bottom: 1rem;
 }
 
 header ul{
@@ -18,28 +20,36 @@ header ul{
     justify-content: center;
     align-items: center;
     list-style: none;
-    background-color: #ff6f00;
+    background-color: #67B714;
     height: 100%;
 }
 
 header ul li{
     flex:0 0 calc(20% - 2rem);
     margin-right: .5rem;
-    background: #00c853;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+header ul li:hover{
+    background-color:#7A2A3D;
+    color: white;
+}
+
+
 header ul li:last-child{
     margin-right: 0;
 } 
 
 .contenedor{
-    width: 90%;
-    margin:0 auto;
+    width: 100%;
+    height: 600px;
+    background:#333333;
+    text-align: center;
 }
 .contenedor img{
-    width: 100%;
+    width: 90%;
+    height: 100%;
 }
